--- a/config.toml
+++ b/config.toml
@@ -24,3 +24,9 @@ home = [ "HTML", "RSS", "JSON"]
 
 [minify]
   disableHTML = true
+
+[[menu.shortcuts]]
+name = "<i class='fab fa-github'></i> GitHub repo"
+identifier = "ds"
+url = "https://github.com/FidelusAleksander/github-actions-quiz"
+weight = 10
