--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -47,7 +47,7 @@ jobs:
         run: |
           hugo \
             --minify \
-            --baseURL "${{ steps.pages.outputs.base_url }}/"
+            --baseURL "${{ steps.pages.outputs.base_url }}/${{ github.event.repository.name}}/"
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
