--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -40,7 +40,7 @@ jobs:
         uses: actions/configure-pages@v3
       - name: Install Node.js dependencies
         run: "[[ -f package-lock.json || -f npm-shrinkwrap.json ]] && npm ci || true"
-      - run: echo "${{ github.event }}"
+      - run: echo "${{ toJson(github) }}"
       - name: Build with Hugo
         env:
           HUGO_ENVIRONMENT: production
