--- a/config.toml
+++ b/config.toml
@@ -2,6 +2,7 @@ languageCode             = "en-us"
 defaultContentLanguage   = "en"
 isMultilingual           = false
 title                    = "Github Actions Quiz"
+baseUrl                  = "/"
 
 description = "Github Actions certification preparation quiz"
 
