--- a/config.toml
+++ b/config.toml
@@ -5,9 +5,8 @@ title                    = "Github Actions Quiz"
 baseUrl                  = "https://fidelusaleksander.github.io/github-actions-quiz/"
 
 description = "Github Actions certification preparation quiz"
-
-
 theme = "hugo-theme-learn"
+
 
 [params]
   description = "A Custom Hugo Shortcode for Interactive Quizzes"
@@ -24,6 +23,11 @@ home = [ "HTML", "RSS", "JSON"]
 
 [minify]
   disableHTML = true
+
+[taxonomies]
+level = 'level'
+subject = 'subject'
+
 
 [[menu.shortcuts]]
 name = "<i class='fab fa-github'></i> GitHub repo"
