--- a/config.toml
+++ b/config.toml
@@ -15,8 +15,10 @@ theme = "hugo-theme-learn"
   disableBreadcrumb = true
   disableNextPrev = true
   disableSearch = true
-  disableHistory= true
+  disableHistory = true
+  disableLandingPageButton = true
   themeVariant = "blue"
+
 
 [outputs]
 home = [ "HTML", "RSS", "JSON"]
