--- a/config.toml
+++ b/config.toml
@@ -5,9 +5,8 @@ title                    = "Github Actions Quiz"
 baseUrl                  = "https://fidelusaleksander.github.io/github-actions-quiz/"
 
 description = "Github Actions certification preparation quiz"
-
-
 theme = "hugo-theme-learn"
+
 
 [params]
   description = "A Custom Hugo Shortcode for Interactive Quizzes"
@@ -16,14 +15,21 @@ theme = "hugo-theme-learn"
   disableBreadcrumb = true
   disableNextPrev = true
   disableSearch = true
-  disableHistory= true
+  disableHistory = true
+  disableLandingPageButton = true
   themeVariant = "blue"
+
 
 [outputs]
 home = [ "HTML", "RSS", "JSON"]
 
 [minify]
   disableHTML = true
+
+[taxonomies]
+level = 'level'
+subject = 'subject'
+
 
 [[menu.shortcuts]]
 name = "<i class='fab fa-github'></i> GitHub repo"
