--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@ languageCode             = "en-us"
 defaultContentLanguage   = "en"
 isMultilingual           = false
 title                    = "Github Actions Quiz"
-baseUrl                  = "https://fidelusaleksander.github.io/github-actions-quiz/"
+baseUrl                  = "https://githubcertified.com/"
 
 description = "Github Actions certification preparation quiz"
 theme = "hugo-theme-learn"
