Single-page overview

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -7,7 +7,7 @@ disableLandingPageButton = true
 themeVariant = [ "auto", "relearn-bright", "relearn-light", "relearn-dark", "zen-light", "zen-dark", "neon", "learn", "blue", "green", "red" ]
 themeVariantAuto = [ "relearn-light", "relearn-dark" ]
 
-alwaysopen = true
+alwaysopen = false
 editURL = "https://github.com/FidelusAleksander/githubcertified/edit/master/content/"
 author = "Aleksander Fidelus"
 description = "Github Certification Exam Preparation"
