--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -12,7 +12,7 @@ disableLandingPageButton = true
 
 alwaysopen = false
 editURL = "https://github.com/FidelusAleksander/githubcertified/edit/master/content/"
-author = "Aleksander Fidelus"
+author.name = "Aleksander Fidelus"
 description = "Github Certification Exam Preparation"
 
 
