Update theme version to 5.23.1, enable searchbar

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -5,8 +5,8 @@ themeVariant = "blue"
 
 showVisitedLinks = false
 disableBreadcrumb = false
-disableNextPrev = true
-disableSearch = true
+disableNextPrev = false
+disableSearch = false
 disableHistory = true
 disableLandingPageButton = true
 
