Update meta tags

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -9,11 +9,12 @@ disableNextPrev = false
 disableSearch = false
 disableHistory = true
 disableLandingPageButton = true
+disableSeoHiddenPages = false
 
 alwaysopen = false
 editURL = "https://github.com/FidelusAleksander/githubcertified/edit/master/content/"
 author.name = "Aleksander Fidelus"
-description = "Github Certification Exam Preparation"
+description = "Prepare for GitHub Certification exams by taking free practice tests. These are not questions dumps but a set of community made questions for GitHub Actions, GitHub Administration, GitHub Advanced Security and GitHub Foundations exams!"
 
 
 # Images for OpenGraph
