--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -2,7 +2,7 @@ languageCode             = "en-us"
 defaultContentLanguage   = "en"
 isMultilingual           = false
 title                    = "Github Certified"
-baseUrl                  = "https://githubcertified.com"
+baseUrl                  = "https://ghcertified.com"
 
 
 theme = "hugo-theme-relearn"
