--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -18,4 +18,4 @@ description = "Prepare for GitHub Certification exams by taking free practice te
 
 
 # Images for OpenGraph
-images = ["images/octocat_certified.jpg"]
+images = ["images/opengraph.png"]
