--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,6 +5,9 @@
 		"ghcr.io/devcontainers/features/hugo:1.1.2": {
 			"version": "0.121.0",
 			"extended": false
+		},
+		"ghcr.io/devcontainers/features/node:1": {
+			"version": "20"
 		}
 	},
 	// Configure tool-specific properties.
@@ -23,7 +26,7 @@
 	],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "git submodule update --init --recursive",
+	"postCreateCommand": "git submodule update --init --recursive --depth 1 && npm install -g cspell",
 	"postStartCommand": "nohup bash -c 'hugo server &'"
 
 }
