Update cspell configuration and removing  setup node

--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -24,10 +24,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
       - uses: streetsidesoftware/cspell-action@v4
         with:
           files: '**/*.md'
           root: 'content'
-          config: '.'
+          config: 'cspell.json'
           
