Spell Check and Small updates to Devcontainer (#159)

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -23,7 +23,7 @@
 	],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "git submodule update --init --recursive",
+	"postCreateCommand": "git submodule update --init --recursive --depth 1",
 	"postStartCommand": "nohup bash -c 'hugo server &'"
 
 }
