--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -26,7 +26,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: streetsidesoftware/cspell-action@v5
         with:
-          files: '**/*.md'
-          root: 'content'
+          files: 'content/**/*.md'
           config: 'cspell.json'
+          verbose: true
           
