--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,1 +1,6 @@
 * @FidelusAleksander
+
+# Reviewing exam questions
+/content/questions/ @tfsjohan
+/content/study_resources/ @tfsjohan
+cspell.json @tfsjohan
