--- a/.github/workflows/preview-site.yml
+++ b/.github/workflows/preview-site.yml
@@ -19,6 +19,8 @@ jobs:
         with:
           submodules: recursive
           fetch-depth: 0
+          repository: ${{ github.event.pull_request.head.repo.full_name }} # Potentially dangerous, shouldn't be used without the label trigger
+          ref: ${{ github.event.pull_request.head.ref }} # Potentially dangerous, shouldn't be used without the label trigger
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v3
         with:
