--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -1,4 +1,4 @@
-languageCode = "en-us"
+languageCode = "en-US"
 defaultContentLanguage = "en"
 title = "GitHub Certified"
 baseUrl = "https://ghcertified.com"
