--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -10,16 +10,19 @@ disableSearch = false
 disableHistory = true
 disableLandingPageButton = true
 disableSeoHiddenPages = false
+hideAuthorDate = true
+
 
 alwaysopen = false
 editURL = "https://github.com/FidelusAleksander/ghcertified/edit/master/content/"
 author.name = "Aleksander Fidelus"
 
+# Disable the language switching button until the site is fully translated
+disableLanguageSwitchingButton = true
+
 
 # Images for OpenGraph
 images = ["images/opengraph.png"]
 
-showLanguageSwitcher = true
-additionalContentLanguage = ['en']
 
-hideAuthorDate = true
+
