--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -1,4 +1,4 @@
-languageCode = "en"
+languageCode = "en-US"
 defaultContentLanguage = "en"
 title = "GitHub Certified"
 baseUrl = "https://ghcertified.com"
@@ -6,8 +6,6 @@ baseUrl = "https://ghcertified.com"
 defaultContentLanguageInSubdir = false
 
 theme = "hugo-theme-relearn"
-
-
 
 [minify]
 disableHTML = true
