--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -18,7 +18,7 @@ editURL = "https://github.com/FidelusAleksander/ghcertified/edit/master/content/
 author.name = "Aleksander Fidelus"
 
 # Disable the language switching button until the site is fully translated
-disableLanguageSwitchingButton = true
+disableLanguageSwitchingButton = false
 
 
 # Images for OpenGraph
