--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -17,7 +17,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: streetsidesoftware/cspell-action@v7
         with:
-          files: 'content/**/*.md'
+          files: 'content/en/**/*.md'
           config: 'cspell.json'
           # Log progress and other information during the action execution.
           verbose: true
