feat: add translation system prompt and instructions for GitHub certification content

--- a/.github/workflows/translate-file.yml
+++ b/.github/workflows/translate-file.yml
@@ -12,6 +12,23 @@ on:
       language_name:
         required: true
         type: string
+  workflow_dispatch:
+    inputs:
+      file:
+        description: 'File path to translate (e.g., content/en/questions/foundations/example.md)'
+        required: true
+        type: string
+        default: 'content/en/questions/actions/question-029.md'
+      language_code:
+        description: 'Target language code (e.g., pl, pt)'
+        required: true
+        type: string
+        default: 'pl'
+      language_name:
+        description: 'Target language name (e.g., Polish, Portuguese)'
+        required: true
+        type: string
+        default: 'Polish'
 
 jobs:
   translate:
@@ -22,12 +39,13 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Translate file
-        uses: FidelusAleksander/ai-translate-action@v1
+        uses: FidelusAleksander/prompt-action@v1
         id: translate
         with:
-          text-file: ${{ inputs.file }}
-          target-language: ${{ inputs.language_name }}
-          custom-instructions: "Keep technical terms, GitHub nomenclature, code blocks, and Front Matter in their original form. Maintain Markdown formatting."
+          system-prompt-file: .github/translation-system-prompt.md
+          prompt-file: ${{ inputs.file }}
+          vars: |
+            targetLanguage=${{ inputs.language_name }}
 
       - name: Save translation
         id: save-translation
@@ -41,7 +59,7 @@ jobs:
           mkdir -p "$TARGET_DIR"
           echo "$TRANSLATED_TEXT" > "$TARGET_PATH"
         env:
-          TRANSLATED_TEXT: ${{ steps.translate.outputs.translated-text }}
+          TRANSLATED_TEXT: ${{ steps.translate.outputs.response }}
 
       - name: Commit changes
         uses: EndBug/add-and-commit@v9
