--- a/.github/workflows/manual-bulk-translate.yml
+++ b/.github/workflows/manual-bulk-translate.yml
@@ -56,3 +56,4 @@ jobs:
       file: ${{ matrix.file }}
       language_code: ${{ inputs.language_code }}
       language_name: ${{ inputs.language_name }}
+      branch: i18n/bulk-translate-${{ inputs.language_code }}
