--- a/.github/workflows/preview-deploy.yml
+++ b/.github/workflows/preview-deploy.yml
@@ -18,6 +18,9 @@ jobs:
     env:
       PR_NUMBER: ${{ github.event.workflow_run.pull_requests[0].number }}
     steps:
+      - run: echo "$FULL_CONTEXT"
+        env:
+          FULL_CONTEXT: ${{ toJSON(github) }}
       - name: Download build artifacts
         uses: actions/download-artifact@v4
         with:
@@ -44,7 +47,7 @@ jobs:
 
             | Name | Link |
             | --- | --- |
-            | :link: Preview URL | ${{ steps.deploy.outputs.pages-deployment-alias-url || steps.deploy.outputs.deployment-url }} |
+            | :link: Preview URL | ${{ steps.deploy.outputs.deployment-url }} |
 
             Please verify everything looks as expected.
 
